--- a/src/pages/auth/callback.astro
+++ b/src/pages/auth/callback.astro
@@ -7,25 +7,33 @@ import { supabaseClient } from "@/supabase/client"
 
 <script type="module" is:inline>
   async function handleAuthCallback() {
-    const urlParams = new URLSearchParams(window.location.search)
-    const code = urlParams.get("code")
-    const state = urlParams.get("state")
+    const urlFragment = window.location.hash.substring(1)
+    const params = new URLSearchParams(urlFragment)
 
-    if (code) {
+    const accessToken = params.get("access_token")
+    const refreshToken = params.get("refresh_token")
+    const providerToken = params.get("provider_token")
+    const expiresIn = params.get("expires_in")
+
+    if (accessToken) {
       try {
-        const { error } = await supabaseClient.auth.exchangeCodeForSession(code)
+        const { error } = await supabaseClient.auth.setSession({
+          access_token: accessToken,
+          refresh_token: refreshToken,
+          expires_in: parseInt(expiresIn),
+        })
 
         if (error) {
-          console.error(error)
+          console.error("Error setting session:", error)
           return
         }
 
         window.location.href = "/"
       } catch (error) {
-        console.error(error)
+        console.error("Error during authentication:", error)
       }
     } else {
-      console.error("Authorization code not found")
+      console.error("Access token not found in the URL fragment")
     }
   }
 
