--- a/src/pages/auth/callback.astro
+++ b/src/pages/auth/callback.astro
@@ -1,41 +1,8 @@
 ---
 import Layout from "@/layouts/Layout.astro"
+import { CallbackComponent } from "@/pages/auth/callback"
 ---
 
-<Layout title="Authenticating" />
-
-<script type="module" is:inline>
-  import { supabaseClient } from "../../supabase/client/index"
-  async function handleAuthCallback() {
-    const urlFragment = window.location.hash.substring(1)
-    const params = new URLSearchParams(urlFragment)
-
-    const accessToken = params.get("access_token")
-    const refreshToken = params.get("refresh_token")
-    const providerToken = params.get("provider_token")
-    const expiresIn = params.get("expires_in")
-
-    if (accessToken) {
-      try {
-        const { error } = await supabaseClient.auth.setSession({
-          access_token: accessToken,
-          refresh_token: refreshToken,
-          expires_in: parseInt(expiresIn),
-        })
-
-        if (error) {
-          console.error("Error setting session:", error)
-          return
-        }
-
-        window.location.href = "/"
-      } catch (error) {
-        console.error("Error during authentication:", error)
-      }
-    } else {
-      console.error("Access token not found in the URL fragment")
-    }
-  }
-
-  handleAuthCallback()
-</script>
+<Layout title="Authenticating">
+    <CallbackComponent client:load/>    
+</Layout>   
