--- a/src/pages/auth/callback.astro
+++ b/src/pages/auth/callback.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "@/layouts/Layout.astro"
-import { CallbackComponent } from "@/pages/auth/callback"
+import { CallbackComponent } from "@/pages/auth/_callback"
 ---
 
 <Layout title="Authenticating">
-    <CallbackComponent client:load/>    
-</Layout>   
+  <CallbackComponent client:load />
+</Layout>
