--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,10 @@
 ---
+import Header from "@/components/react/navigation/header"
 interface Props {
-  title: string;
+  title: string
 }
 
-const { title } = Astro.props;
+const { title } = Astro.props
 ---
 
 <!doctype html>
@@ -16,7 +17,10 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
-    <slot />
+  <body class="min-h-screen theme-custom bg-background flex flex-col">
+    <Header client:load />
+    <main class="flex-grow min-w-screen flex items-center justify-center">
+      <slot />
+    </main>
   </body>
 </html>
