--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.theme-custom {
+    /* Name: custom color palette
+       Author: Ilias Ism
+       URL: https://gradient.page */
+
+    /* CSS: .bg-gradient { background: var(--gradient) } */
+    --gradient: linear-gradient(to top left, #fcc5e4, #fda34b, #ff7882, #c8699e, #7046aa, #0c1db8, #020f75);
+
+    --background: -36 58.5% 7.04%;
+    --foreground: -36 9% 99.4%;
+
+    --muted: -36 45% 26.4%;
+    --muted-foreground: -36 9% 58.8%;
+
+    --popover: -36 47% 11.44%;
+    --popover-foreground: -36 9% 99.4%;
+
+    --card: -36 47% 11.44%;
+    --card-foreground: -36 9% 99.4%;
+
+    --border: -36 45% 26.4%;
+    --input: -36 45% 26.4%;
+
+    --primary: -36 90% 88%;
+    --primary-foreground: -36 9% 8.8%;
+
+    --secondary: -36 45% 26.4%;
+    --secondary-foreground: -36 9% 99.4%;
+
+    --accent: -36 45% 26.4%;
+    --accent-foreground: -36 9% 99.4%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: -36 9% 99.4%;
+
+    --ring: -36 90% 88%;
+}
