--- a/src/pages/test/index.astro
+++ b/src/pages/test/index.astro
@@ -19,7 +19,7 @@
           "Content-Type": "application/json",
         },
         body: JSON.stringify({
-          token: "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",
+          token: "",
           branch: "master",
           owner: "dimitaryord",
           repo: "func-easy",
