feat repitory page

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "@/components/react/navigation/header"
+import "@/styles/globals.css"
 interface Props {
   title: string
 }
