--- a/src/pages/test/index.astro
+++ b/src/pages/test/index.astro
@@ -19,11 +19,12 @@
           "Content-Type": "application/json",
         },
         body: JSON.stringify({
-          token: "",
+          token: "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",
           branch: "master",
           owner: "dimitaryord",
           repo: "func-easy",
           provider: "github",
+          srcfunctions: "src/functions",
         }),
       })
       const data = await response.json()
