--- a/src/pages/projects/[project]/create-deployment/index.astro
+++ b/src/pages/projects/[project]/create-deployment/index.astro
@@ -1,8 +1,10 @@
 ---
 import CreateDeploymentComponent from "@/pages/projects/[project]/create-deployment/_create-deployment"
 import Layout from "@/layouts/Layout.astro"
+
+const { project } = Astro.params
 ---
 
 <Layout title="Create Deplyoment">
-  <CreateDeploymentComponent client:load />
+  <CreateDeploymentComponent project={project as string} client:load />
 </Layout>
